# ldll

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ldll/: __init__.py  ldll.py
tests/: test_core.py
